Update the save button on capture window. Add try catch block

--- a/ProjectTimeline/Views/pgCapture.xaml
+++ b/ProjectTimeline/Views/pgCapture.xaml
@@ -6,24 +6,24 @@
       xmlns:local="clr-namespace:ProjectTimeline.Views"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="pgCapture">
+      Title="Capture Project">
 
     <Grid Background="White">
         <Label Content="Project Code" HorizontalAlignment="Left" Margin="46,21,0,0" VerticalAlignment="Top" FontSize="18"/>
         <TextBox x:Name="txtCode" HorizontalAlignment="Left" Margin="46,57,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="202" FontSize="18"/>
         <Label Content="Project Name" HorizontalAlignment="Left" Margin="400,21,0,0" VerticalAlignment="Top" FontSize="18"/>
         <TextBox x:Name="txtProjectName" Margin="400,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="202"/>
-        <Label Content="Start Date" HorizontalAlignment="Left" Margin="33,114,0,0" VerticalAlignment="Top" FontSize="18"/>
-        <DatePicker Name="dtpStartDate" HorizontalAlignment="Left" Margin="33,156,0,0" VerticalAlignment="Top" FontSize="18" Width="202"/>
+        <Label Content="Start Date" HorizontalAlignment="Left" Margin="46,114,0,0" VerticalAlignment="Top" FontSize="18"/>
+        <DatePicker Name="dtpStartDate" HorizontalAlignment="Left" Margin="46,156,0,0" VerticalAlignment="Top" FontSize="18" Width="202"/>
         <Label Content="End Date" HorizontalAlignment="Left" Margin="400,114,0,0" VerticalAlignment="Top" FontSize="18"/>
         <DatePicker x:Name="dtpEndDate" HorizontalAlignment="Left" Margin="400,156,0,0" VerticalAlignment="Top" FontSize="18" Width="202"/>
-        <Label Content="Duration" HorizontalAlignment="Left" Margin="33,280,0,0" VerticalAlignment="Top" FontSize="18"/>
-        <TextBox x:Name="txtDuration" Margin="33,322,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="202"/>
+        <Label Content="Duration" HorizontalAlignment="Left" Margin="51,280,0,0" VerticalAlignment="Top" FontSize="18"/>
+        <TextBox x:Name="txtDuration" IsEnabled="False" Margin="46,322,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="202"/>
         <Label Content="Estimated Cost" HorizontalAlignment="Left" Margin="400,280,0,0" VerticalAlignment="Top" FontSize="18"/>
-        <TextBox x:Name="txtEstCost" Margin="400,322,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="202"/>
+        <TextBox x:Name="txtEstCost" IsEnabled="False" Margin="400,322,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="202"/>
         <Button Name="btnSave" Content="SAVE" HorizontalAlignment="Left" Margin="46,377,0,0" VerticalAlignment="Top" FontSize="18" Height="41" Width="110" Click="btnSave_Click"/>
-        <Label Content="Hourly Rate" HorizontalAlignment="Left" Margin="33,198,0,0" VerticalAlignment="Top" FontSize="18"/>
-        <TextBox x:Name="txtRate" Margin="33,240,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="202"/>
+        <Label Content="Hourly Rate" HorizontalAlignment="Left" Margin="46,0,0,0" VerticalAlignment="Center" FontSize="18"/>
+        <TextBox x:Name="txtRate" Margin="46,249,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="202"/>
 
     </Grid>
 </Page>
