--- a/ProjectTimeline/Views/pgFilter.xaml
+++ b/ProjectTimeline/Views/pgFilter.xaml
@@ -21,8 +21,8 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Code" Width="*" Binding="{Binding Code}"/>
                 <DataGridTextColumn Header="Project Name" Width="*" Binding="{Binding ProjectName}"/>
-                <DataGridTextColumn Header="Start Date" Width="*" Binding="{Binding StartDate}"/>
-                <DataGridTextColumn Header="End Date" Width="*" Binding="{Binding EndDate}"/>
+                <DataGridTextColumn Header="Start Date" Width="*" Binding="{Binding StartDate,StringFormat={}{0:dd/MM/yyyy}}"/>
+                <DataGridTextColumn Header="End Date" Width="*" Binding="{Binding EndDate,StringFormat={}{0:dd/MM/yyyy}}"/>
                 <DataGridTextColumn Header="Duration" Width="*" Binding="{Binding Duration}"/>
                 <DataGridTextColumn Header="Estimated Cost" Width="*" Binding="{Binding EstimatedCost,StringFormat=C}"/>
             </DataGrid.Columns>
