--- a/ProjectTimeline/Common/Styles.xaml
+++ b/ProjectTimeline/Common/Styles.xaml
@@ -2,7 +2,12 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style TargetType="Button" x:Key="b_cancel">
-        
+        <Setter Property="Background" Value="IndianRed"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Width" Value="100"/>
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="Padding" Value="5"/>
     </Style>
     
     <Style TargetType="Button" x:Key="b_success">
