--- a/ProjectTimeline/MainWindow.xaml
+++ b/ProjectTimeline/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjectTimeline"
-        mc:Ignorable="d"
+        mc:Ignorable="d" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded"
         Title="MainWindow" Height="550" Width="1100">
     <Grid>
         <Grid.ColumnDefinitions>
